@@ -29,6 +29,7 @@ lib/Qpsmtpd/Connection.pm
 lib/Qpsmtpd/Constants.pm
 lib/Qpsmtpd/DSN.pm
 lib/Qpsmtpd/Plugin.pm
+lib/Qpsmtpd/Plugin/Async/DNSBLBase.pm
 lib/Qpsmtpd/PollServer.pm
 lib/Qpsmtpd/Postfix.pm
 lib/Qpsmtpd/Postfix/Constants.pm
@@ -47,9 +48,12 @@ MANIFEST			This list of files
 MANIFEST.SKIP
 META.yml			Module meta-data (added by MakeMaker)
 plugins/async/check_earlytalker
+plugins/async/dns_whitelist_soft
 plugins/async/dnsbl
 plugins/async/require_resolvable_fromhost
+plugins/async/rhsbl
 plugins/async/queue/smtp-forward
+plugins/async/uribl
 plugins/auth/auth_cvm_unix_local
 plugins/auth/auth_flat_file
 plugins/auth/auth_ldap_bind
