@@ -1,20 +1,27 @@
 #!/usr/bin/perl -w
 
-use ParaDNS;
+use Qpsmtpd::Plugin::Async::DNSBLBase;
 
 sub init {
     my ($self, $qp, $denial) = @_;
+    my $class = ref $self;
+
+    {
+        no strict 'refs';
+        push @{"${class}::ISA"}, 'Qpsmtpd::Plugin::Async::DNSBLBase';
+    }
+
     if (defined $denial and $denial =~ /^disconnect$/i) {
         $self->{_dnsbl}->{DENY} = DENY_DISCONNECT;
     }
     else {
         $self->{_dnsbl}->{DENY} = DENY;
     }
-
 }
 
 sub hook_connect {
     my ($self, $transaction) = @_;
+    my $class = ref $self;
 
     my $remote_ip = $self->connection->remote_ip;
 
@@ -29,72 +36,47 @@ sub hook_connect {
 
     my $reversed_ip = join(".", reverse(split(/\./, $remote_ip)));
 
-    my $total_zones = keys %dnsbl_zones;
-    my $qp          = $self->qp;
-    for my $dnsbl (keys %dnsbl_zones) {
+    my @A_zones   = grep { defined($dnsbl_zones{$_}) } keys %dnsbl_zones;
+    my @TXT_zones = grep { !defined($dnsbl_zones{$_}) } keys %dnsbl_zones;
 
-# fix to find A records, if the dnsbl_zones line has a second field 20/1/04 ++msp
-        if (defined($dnsbl_zones{$dnsbl})) {
-            $self->log(LOGDEBUG,
-                 "Checking $reversed_ip.$dnsbl for A record in the background");
-            ParaDNS->new(
-                callback => sub {
-                    process_a_result($qp, $dnsbl_zones{$dnsbl}, @_);
-                },
-                finished => sub { $total_zones--; finished($qp, $total_zones) },
-                host   => "$reversed_ip.$dnsbl",
-                type   => 'A',
-                client => $self->qp->input_sock,
-                        );
-        }
-        else {
-            $self->log(LOGDEBUG,
-                 "Checking $reversed_ip.$dnsbl for TXT record in the background"
-            );
-            ParaDNS->new(
-                callback => sub { process_txt_result($qp, @_) },
-                finished => sub { $total_zones--; finished($qp, $total_zones) },
-                host   => "$reversed_ip.$dnsbl",
-                type   => 'TXT',
-                client => $self->qp->input_sock,
-                        );
-        }
+    if (@A_zones) {
+
+        # message templates for responding to the client
+        $self->connection->notes(
+            dnsbl_templates => {
+                map {
+                    +"$reversed_ip.$_" => $dnsbl_zones{$_}
+                  } @A_zones
+            }
+        );
     }
+
+    return DECLINED
+      unless $class->lookup($self->qp,
+                            [map { "$reversed_ip.$_" } @A_zones],
+                            [map { "$reversed_ip.$_" } @TXT_zones],
+                           );
 
     return YIELD;
 }
 
-sub finished {
-    my ($qp, $total_zones) = @_;
-    $qp->log(LOGINFO, "Finished ($total_zones)");
-    $qp->run_continuation unless $total_zones;
-}
-
 sub process_a_result {
-    my ($qp, $template, $result, $query) = @_;
-
-    $qp->log(LOGINFO, "Result for A $query: $result");
-    if ($result !~ /^\d+\.\d+\.\d+\.\d+$/) {
-
-        # NXDOMAIN or ERROR possibly...
-        return;
-    }
+    my ($class, $qp, $result, $query) = @_;
 
     my $conn = $qp->connection;
-    my $ip   = $conn->remote_ip;
+    return if $conn->notes('dnsbl');
+
+    my $templates = $conn->notes('dnsbl_templates');
+    my $ip        = $conn->remote_ip;
+
+    my $template = $templates->{$query};
     $template =~ s/%IP%/$ip/g;
-    $conn->notes('dnsbl', $template) unless $conn->notes('dnsbl');
+
+    $conn->notes('dnsbl', $template);
 }
 
 sub process_txt_result {
-    my ($qp, $result, $query) = @_;
-
-    $qp->log(LOGINFO, "Result for TXT $query: $result");
-    if ($result !~ /[a-z]/) {
-
-        # NXDOMAIN or ERROR probably...
-        return;
-    }
+    my ($class, $qp, $result, $query) = @_;
 
     my $conn = $qp->connection;
     $conn->notes('dnsbl', $result) unless $conn->notes('dnsbl');
